--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,8 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <body style="margin: 0px; padding: 0px">
+      <div id="root"></div>
+    </body>
   </body>
 </html>
