--- a/projects/main/src/index.html
+++ b/projects/main/src/index.html
@@ -1,16 +1,24 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ko">
-<head>
-  <meta charset="utf-8">
-  <title>충북대학교 SW중심대학사업단 Online Judge</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-</head>
-<body>
-  <sw-root></sw-root>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <title>충북대학교 SW중심대학사업단 Online Judge</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="og:site_name" content="달레의 블로그" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="CBNU Online Judge" />
+    <meta
+      name="description"
+      content="충북대학교 학생들이 알고리즘 대회를 진행하거나 프로그래밍 과제를 제출하면 채점이 되고 결과를 알려줍니다."
+    />
+    <meta name="og:url" content="https://swjudge.cbnu.ac.kr/" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+  </head>
+  <body>
+    <sw-root></sw-root>
+  </body>
 </html>
