Add: 개발서버 url parsing 체크용 콘솔로그 추가

--- a/projects/main/src/index.html
+++ b/projects/main/src/index.html
@@ -5,7 +5,7 @@
     <title>충북대학교 SW중심대학사업단 Online Judge</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="og:site_name" content="달레의 블로그" />
+    <meta name="og:site_name" content="충북대학교 온라인 judge 시스템" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="CBNU Online Judge" />
     <meta
